syntax = "proto3";
package g2u;


message PaysResponse{
    int32   code        =1;
    string  message     =2;
    string  data        =3;
}

message BankPayRequest{
    uint64   uid         =1;
    string  token       =2;
    string  name        =3;
    string  card_num    =4;
    string  verify_num  =5;  
    string  bank_name   =6;
    string  bank_info   =7;
    string  verify      =8;
}



message WeChatPayRequest{
    uint64   uid         =1;
    string token        =2;
    string  name        =3;
    string  wechat      =4;
    string  receipt_code=5;
    string  verify      =6;
}

message AlipayRequest{
    uint64   uid         =1;
    string token        =2;
    string  name        =3;
    string  alipay      =4;
    string  receipt_code=5;
    string  verify      =6;
}

message PaypalRequest{
    uint64  uid         =1;
    string  token        =2;
    string  paypal      =3;
    string  verify      =4;
}